Fixed #15873 -- CSS alignment issue in docs.
Thanks Gabriel Hurley for the report and patch.

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -573,6 +573,10 @@ div.versionchanged span.title {
 #documentation a.reference em {
     font-style: normal;
 }
+#documentation td.field-body ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
 /* BILLBOARDS */
 
